--- a/BMI Generator/index.html
+++ b/BMI Generator/index.html
@@ -6,6 +6,10 @@
     <title>BMI Generator</title>
 </head>
 <body>
+    <nav>
+        <button>Home</button>
+        <button>Youtube Channel</button>
+    </nav>
     
 </body>
 </html>
