--- a/BMI Generator/index.html
+++ b/BMI Generator/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMI Generator</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
@@ -11,5 +12,6 @@
         <button>Youtube Channel</button>
     </nav>
     
+    <script src="script.js"></script>
 </body>
 </html>
