--- a/BMI Generator/index.html
+++ b/BMI Generator/index.html
@@ -8,10 +8,19 @@
 </head>
 <body>
     <nav>
-        <button>Home</button>
-        <button>Youtube Channel</button>
+        <a href="/" area-content="page">Home</a>
+        <a target="_blank" href="https://www.Youtube.com">Youtube Channel</a>
     </nav>
-    
+    <div class="container">
+        <h1>BMI Generator</h1>
+
+        <form>
+            <p><label>Height in cm:</label> <input type="text" id="Height"/></p>
+            <p><label>Height in kg:</label> <input type="text" id="Height"/></p>
+<button id="">calculate</button>
+
+        </form>
+    </div>
     <script src="script.js"></script>
 </body>
-</html>
+  
