--- a/BMI Generator/index.html
+++ b/BMI Generator/index.html
@@ -18,7 +18,14 @@
             <p><label>Height in cm:</label> <input type="text" id="Height"/></p>
             <p><label>Height in kg:</label> <input type="text" id="Height"/></p>
 <button id="">calculate</button>
-
+<div id="results"></div>
+<div id="weight guide">
+<p>under weight guide</p>
+<p>Normal Range =  18.6 and
+    <p>under weight = Less than  18.6</p>
+ 24.9 </p>
+<p>overweight = greater than 24.9</p>
+</div>
         </form>
     </div>
     <script src="script.js"></script>
