--- a/js-basics/dom.html
+++ b/js-basics/dom.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dom</title>
+    <title>Dom learning</title>
+    <style>
+        .bg-black{
+            background-color: blueviolet;
+            
+        }
+    </style>
 </head>
 <body>
     
