--- a/js-basics/dom2.html
+++ b/js-basics/dom2.html
@@ -11,9 +11,11 @@
 <div class="day">Tuesday</div>
 <div class="day">Wednesday</div>
 <div class="day">Thursday</div>
+</div>   
 
-
-
-</div>    
+<script>
+   const parent = document.querySelector('.parent')
+   console.log("parent");
+</script>
 </body>
 </html>
