--- a/BMI Generator/index.html
+++ b/BMI Generator/index.html
@@ -6,7 +6,7 @@
     <title>BMI Generator</title>
     <link rel="stylesheet" href="styles.css">
 </head> 
-<body>
+<body style="background-color: cornflowerblue;">
     <nav>
         <a href="/" area-content="page">Home</a>
         <a target="_blank" href="https://www.Youtube.com">Youtube Channel</a>
