--- a/BMI Generator/index.html
+++ b/BMI Generator/index.html
@@ -15,9 +15,9 @@
         <h1>BMI Generator</h1>
 
         <form>
-            <p><label>Height in cm:</label> <input type="text" id="Height"/></p>
-            <p><label>Height in kg:</label> <input type="text" id="Height"/></p>
-<button id="">calculate</button>
+            <p><label>Height in cm:</label> <input type="text" id="height"/></p>
+            <p><label>weight in kg:</label> <input type="text" id="weight"/></p>
+<button>calculate</button>
 <div id="results"></div>
 <div id="weight guide">
 <p>under weight guide</p>
