--- a/BMI Generator/index.html
+++ b/BMI Generator/index.html
@@ -15,8 +15,8 @@
         <h1>BMI Generator</h1>
 
         <form>
-            <p><label>Height in cm:</label> <input type="text" id="Height"/></p>
-            <p><label>Height in kg:</label> <input type="text" id="Height"/></p>
+            <p><label for="text">Height in cm:</label> <input type="text" id="Height"/></p>
+            <p><label for="text">Height in kg:</label> <input type="text" id="Height"/></p>
 <button id="">calculate</button>
 <div id="results"></div>
 <div id="weight guide">
