--- a/Digital Clock/index.html
+++ b/Digital Clock/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+          background-color: #212121;
+          color: #fff;
+        }
+        .center {
+          display: flex;
+          height: 100vh;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+        }
+        #clock {
+            height: 5vh;
+          font-size: 40px;
+          background-color: rgb(54, 115, 14);
+          padding: 20px 50px;
+          margin-top: 10px;
+          border-radius: 10px 20px 15px 20px;
+        }
+   </style>
 </head>
-<body style="background-color: black;">
-    <nav><a link href=""></a>/nav>
+<body>
+    <nav><a link href="#">Home</a></nav>
 
 <div class="center">
     <div id="banner"><span>Your local time</span></div>
