--- a/Digital Clock/index.html
+++ b/Digital Clock/index.html
@@ -17,7 +17,7 @@
           flex-direction: column;
         }
         #clock {
-            height: 5vh;
+            height: 14vh;
           font-size: 40px;
           background-color: rgb(54, 115, 14);
           padding: 20px 50px;
@@ -27,11 +27,14 @@
    </style>
 </head>
 <body>
-    <nav><a link href="#">Home</a></nav>
+    <nav><a link href="https//www.youtube.com">Home</a></nav>
 
 <div class="center">
     <div id="banner"><span>Your local time</span></div>
-<div id="clock"></div>
+    <div id="clock"></div>
 </div>
+
+
+<script src="script.js"></script>
     </body>
 </html>
