--- a/Guess the number/index.html
+++ b/Guess the number/index.html
@@ -12,7 +12,7 @@
       You have 10 attempts to guess the right number
     </p><br>
     <form class="form">
-      <label for="guessfield" id="guess">Guess the number</label>
+      <label for="guessfield" id="guess2">Guess the number</label>
 <input type="text" id="guessfield" class="guessfield">
 <input type="submit" id="subt" value="Submit guess" class="gsubmit">
     </form>
@@ -25,6 +25,6 @@
     </div>
   </div>
 
-  <script src="script.js"></script>  
+  <script src="script2.js"></script>  
 </body>
 </html>
