--- a/js-basics/event.html
+++ b/js-basics/event.html
@@ -15,19 +15,62 @@
             <li><img width="200px" id="image4" src="https://images.pexels.com/photos/3532549/pexels-photo-3532549.jpeg?auto=compress&cs=tinysrgb&w=400&lazy=load" alt="fourt"></li>
             <li><img width="200px" id="image5" src="https://images.pexels.com/photos/3532543/pexels-photo-3532543.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="fift"></li>
             <li><img width="200px" id="image6" src="https://images.pexels.com/photos/2519824/pexels-photo-2519824.jpeg?auto=compress&cs=tinysrgb&w=400&lazy=load" alt="sixt"></li>
-            <li><img width="200px" id="image7" src="https://images.pexels.com/photos/1144279/pexels-photo-1144279.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="sev"></li>
+            <li><img width="200px" id="swan" src="https://images.pexels.com/photos/1144279/pexels-photo-1144279.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="sev"></li>
             <li><a style="color: aliceblue;" href="https://google.com" id="google">Google</a></li>
         </ul>
     </div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            document.getElementById('image5').onclick = function() {
+           /* document.getElementById('image5').onclick = function() {
                 console.log('image5 Clicked');
                 alert("clicked");
-            }
-        });
+            }*/
+    /* document.getElementById('image5').addEventListener('click', function(){
+        alert("owl clicked again")
+console.log('clicked owl');
+    })*/
+    //attachEvent()
+    //jQuery-on
+    //type, timestamp, defaultPrevented
+    //target, toElement, srcElement, currentTarget,
+    //clientX, clientY, screenX, screenY
+    //altkey, atrlkey, shiftkey, keyCode
+
+
+    /*document.getElementById('image4').addEventListener('click', function(e){
+        console.log(e);
+    },false)
+document.getElementById('images').addEventListener('click', function(e){
+    console.log("clicked inside the ul")
+}, false)*/
+
+//document.getElementById('swan').addEventListener('click', function(e){
+  //  console.log("swan clicked");
+  //  e.stopPropagation()
+//}, false)
+    
+
+//document.getElementById('google').addEventListener
+//('click', function(e){
+//console.log('google clicked');
+   // e.preventDefault();
+   // e.stopPropagation()
+//}, false)
+
+
+document.querySelector('#images').addEventListener
+('click',function(e){
+    console.log(e.target.tagName);
+    if(e.target.tagName === img)
+    let removeIt = e.target.parentNode
+  removeIt.remove()
+//removeIt.parentNode.removeIt(removeIt)
+
+},false)
+//removeIt.parentNode.removeChild(removeIt)
+
     </script>
     
 </body>
 </html>
+ 
