--- a/js-basics/event.html
+++ b/js-basics/event.html
@@ -62,7 +62,7 @@ document.querySelector('#images').addEventListener
 ('click',function(e){
     console.log(e.target.tagName);
     if(e.target.tagName === 'IMG') 
-    let removeIt = e.target.parentNode
+   // let removeIt = e.target.parentNode
   removeIt.remove()
 //removeIt.parentNode.removeIt(removeIt)
 
