--- a/js-basics/asyncevent/three.html
+++ b/js-basics/asyncevent/three.html
@@ -11,14 +11,24 @@
 <button id="stop">stop</button>   
 
 <script>
-    setInterval(function () {
-        console.log("str" ,Date.now());
+    let intervalId = null;
+    const sayDate = function(str){
+        console.log(str, Date.now());
+    }
     
-    })
-    setInterval(sayDate, 2000,"hi")
+     document.getElementById('start').addEventListener('click', function(){
+        if (intervalId === null) {
+            intervalId = setInterval(sayDate, 1000, "hi");
+        }
+     });
+     document.getElementById('stop').addEventListener('click', function(){
+        if (intervalId !== null) {
+            clearInterval (intervalId);
+            intervalId = null;
+        }
+     
+     });
 
-const intervalId = setInterval(sayDate, 1000,"hi")
-    clearInterval(intervalId)
-</script>
+     </script>
 </body>
 </html>
