--- a/js-basics/asyncevent/colorchange/index.html
+++ b/js-basics/asyncevent/colorchange/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
    <h1>start should change the background color </h1>
- <button id="stop">stop</button>
+ <button id="stop">Stop</button>
 
- <button id="start">start</button>
+ <button id="start">Start</button>
 
 <script src="script.js"></script>
  </body>
