--- a/js-basics/form.html
+++ b/js-basics/form.html
@@ -23,6 +23,13 @@
 <body>
   <div class="container">
     <h2>Contact US</h2>
+   
+   <p class="blue">This is blue.</p>
+<p class="blue-text">This is also blue.</p>
+<!-- Both use the same class -->
++
+<h1 id="main-heading">Welcome!</h1>
+
     <form >
         <label for="name">Name</label>
             <input type="text"><br>
