--- a/color changer/index.html
+++ b/color changer/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 <div class="container">
-    <h1 class="head">Color Scheme Switcher</h1>
-    <div class="box">
-    <span class="button" id="Red"></span>
-    <span class="button" id="yellow"></span>
-    <span class="button" id="grey"></span>
-    <span class="button"id="blueviolet" ></span>
-    <span class="button" id="green"></span>
-
+ <h1 class="head">Color Scheme Switcher</h1>
+    <div class="left">
+        <span class="button" id="red"></span>
+        <span class="button" id="yellow"></span>
+        <span class="button" id="grey"></span>
+        <span class="button"id="blueviolet" ></span>
+        <span class="button" id="green"></span>
+    </div>
 </div>
   
 
