--- a/js-basics/dom.html
+++ b/js-basics/dom.html
@@ -25,4 +25,11 @@ title{
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim magnam aperiam, dignissimos nemo repellendus porro nostrum ut distinctio modi sit beatae. Omnis molestiae doloribus iusto,
              nisi facilis eius explicabo debitis.</p>
     </div>
+    <input type="password" id="password" placeholder="Enter your password">
+    <ul>
+    <li class="sajna">1</li>
+    <li class="sajna">5</li>
+    <li class="sajna">6</li>
+    <li class="sajna">5</li>
+</ul>
 </body>
