--- a/js-basics/dom2.html
+++ b/js-basics/dom2.html
@@ -16,9 +16,9 @@
 </div>
 <script>
     const parent = document.querySelector('.parent')
-//console.log(parent);
-//console.log(parent.children);
-//console.log(parent.children[1].innerHTML);
+console.log(parent);
+console.log(parent.children);
+console.log(parent.children[1].innerHTML);
 
 //for(let i=0; i<parent.children.length; i++){
   //  console.log(parent.children[i].innerHTML);
@@ -41,6 +41,5 @@ console.log("Nodes: ",parent.childNodes);
    const parent = document.querySelector('.parent')
    console.log("parent");
 </script>
->>>>>>> f0e93df4b45fee7ab13956076fad3c91aa1f44a2
 </body>
 </html>
