--- a/BMI Generator/index.html
+++ b/BMI Generator/index.html
@@ -7,25 +7,23 @@
     <link rel="stylesheet" href="styles.css">
 </head> 
 <body style="background-color: cornflowerblue;">
-    <nav>
-        <a href="/" area-content="page">Home</a>
-        <a target="_blank" href="https://www.Youtube.com">Youtube Channel</a>
-    </nav>
     <div class="container">
         <h1>BMI Generator</h1>
 
-        <form>
+        <form class="form">
         
-            <p><label for="text">Height in cm:</label> <input type="text" id="height"/></p>
-            <p><label for="text">weight in kg:</label> <input type="text" id="weight"/></p>
-<button>calculate</button>
+            <p><label for="text">Height in Cm</label>
+                 <input type="text" id="height"/></p>
+            <p><label for="text">Weight in Kg</label> 
+                <input type="text" id="weight"/></p>
+<button>Calculate</button>
 <div id="results"></div>
 <div id="weight guide">
-<p>under weight guide</p>
-<p>Normal Range =  18.6 and
-    <p>under weight = Less than  18.6</p>
+<h3>Under weight guide</h3>
+<p class="p1">Normal Range =  18.6</p>
+    <p class="p2">Under weight = Less than  18.6</p>
  24.9 </p>
-<p>overweight = greater than 24.9</p>
+<p class="p3">Overweight = greater than 24.9</p>
 </div>
         </form>
     </div>
